resources/css/front/utilities/markup.css
.markup .title {
    @apply mb-8;
}

.markup .title-sm {
    @apply mb-4;
}

.markup address:not(:last-child),
.markup p:not(:last-child),
.markup ol:not(:last-child),
.markup ul:not(:last-child),
.markup iframe {
    margin-bottom: 1.5em;
}

.markup strong {
    @apply font-bold;
}

.markup em {
    @apply font-pt;
    @apply italic;
}

.markup sub,
.markup sup {
    @apply text-xs;
}

.markup-titles h1 {
    @apply text-4xl/[0.8];
    @apply font-druk;
    @apply font-bold;
    @apply leading-tight;
    @apply mb-16;
    @apply uppercase;
    page-break-inside: avoid;
    page-break-after: avoid;
}

@screen sm {
    .markup-titles h1 {
        @apply text-5xl;
    }
}

.markup-titles h1:not(:first-child) {
    @apply mt-32;
    page-break-before: always;
}

.markup-titles h2 {
    @apply text-2xl;
    @apply font-pt;
    @apply font-bold;
    @apply leading-tight;
    @apply mb-8;
    page-break-inside: avoid;
    page-break-after: avoid;
}

.markup-titles h2:not(:first-child) {
    @apply mt-16;
}

.markup-titles h2 + h3 {
    @apply mt-8;
}

.markup-titles h3 {
    @apply font-pt;
    @apply font-bold;
    @apply uppercase;
    @apply leading-tight;
    @apply mb-4;
    @apply mt-18;
    page-break-inside: avoid;
    page-break-after: avoid;
}

.markup-titles h4 {
    @apply text-xs;
    @apply font-pt;
    @apply font-bold;
    @apply uppercase;
    @apply leading-tight;
    @apply mt-2;
    @apply mb-2;
    @apply mt-8;
    page-break-inside: avoid;
    page-break-after: avoid;
}

.markup-titles h2 .heading-permalink,
.markup-titles h3 .heading-permalink,
.markup-titles h4 .heading-permalink {
    @apply absolute;
    @apply right-full;
    @apply top-0;
    @apply opacity-0;
    @apply text-gray-lighter !important;
    @apply no-underline !important;
    @apply pr-1;
    @apply transition;
}

.markup-titles h2:hover .heading-permalink,
.markup-titles h3:hover .heading-permalink,
.markup-titles h4:hover .heading-permalink {
    @apply opacity-100;
}

.markup-titles code {
    @apply normal-case;
}

.markup-lists li:not(:last-child) {
    margin-bottom: 0.35em;
}

.markup-lists ul > li {
    padding-left: 1.2em;
}

.markup-lists ul > li:before {
    @apply text-blue;
    content: '•';
    left: 0;
    position: absolute;
    opacity: 0.75;
}

.markup-lists ol {
    --counter-reset: ol;
    --counter-increment: ol;
    --counter-style: decimal;

    counter-reset: var(--counter-reset);
}

.markup-lists ol > li {
    --counter-content: counter(var(--counter-increment), var(--counter-style)) '.';

    counter-increment: var(--counter-increment);
    padding-left: 1.2em;
}

.markup-lists ol > li:before {
    left: 0;
    position: absolute;
    content: var(--counter-content);
}

.markup-lists-compact li,
.markup-list-compact li {
    padding-left: 1.8em !important;
}

/* inline code */

.markup-code :not(pre) code {
    @apply bg-blue-lightest;
    @apply bg-opacity-25;
    @apply px-1;
    @apply font-mono;
    @apply rounded-sm;
    @apply break-words;
}

/* block code */

.markup-code > pre > code {
    display: block;
    overflow-x: auto;
    @apply my-8;
    @apply p-6;
    @apply bg-blue-lightest;
    @apply bg-opacity-25;
    @apply text-sm;
    @apply font-mono;
}

.markup-code .article_badges {
    @apply flex;
    @apply flex-wrap;
}

.markup-code .article_badges img {
    @apply mb-2;
    @apply mr-4;
}

/* Table styles */

.markup-tables table {
    @apply border-collapse;
    @apply border-t;
    @apply border-b;
    @apply border-gray-lighter;
    @apply w-full;
    @apply text-sm;
    @apply my-6;
}

.markup-tables table thead tr {
    @apply border-b;
    @apply border-gray-lighter;
    @apply bg-gray-lightest;
    @apply bg-opacity-25;
    font-size: 0.875em;
}

.markup-tables table th,
.markup-tables table td {
    @apply py-2;
    @apply px-1;
}

@screen sm {
    .markup-tables table th,
    .markup-tables table td {
        @apply px-2;
    }
}

.markup-tables table th {
    @apply text-left;
    @apply font-normal;
    @apply whitespace-nowrap;
    @apply uppercase;
    @apply text-xs;
    @apply text-gray;
}

.markup-tables table tbody tr {
    @apply border-t;
    @apply border-gray-lighter;
}

.markup-tables table thead .th-numeric,
.markup-tables table tbody .td-numeric {
    @apply text-right;
    font-variant-numeric: tabular-nums;
}

.markup-embeds iframe {
    width: 100%;
}


/* Code markup */

.markup-code code {
    @apply bg-paper;
    @apply px-1;
    @apply font-mono;
    @apply rounded-sm;
    color: inherit;
    font-size: 0.9em;
}

.markup pre {
    @apply px-9;
    @apply py-7.5;
    @apply my-6;
    @apply rounded-lg;
    @apply overflow-hidden;
    @apply overflow-x-scroll;
    @apply bg-oss-gray-light;
    @apply text-[15px];
    @apply leading-relaxed;
}

.markup-code pre::-webkit-scrollbar { height: 1px;width: 1px; }

.markup-code pre::-webkit-scrollbar-track {
    background: transparent;
}

.markup-code pre::-webkit-scrollbar-thumb {
    background-image: none;
    @apply bg-gray-light;
    @apply bg-opacity-25;
}


.markup-code .hl-good pre {
    @apply border-l-4;
    @apply border-green-lighter;
}

.markup-code .hl-bad pre {
    @apply border-l-4;
    @apply border-pink-lighter;
}

.markup-code .hl-good:before,
.markup-code .hl-bad:before {
    @apply absolute;
    top: 50%;
    right: 3rem;
    transform: translateY(-50%);
    @apply shadow;
    @apply z-10;
    @apply w-6;
    @apply h-6;
    @apply rounded-full;
    @apply flex;
    @apply items-center;
    @apply justify-center;
    @apply text-white;
    @apply font-bold;
    @apply text-xs;
}

.markup-code .hl-good:before {
    @apply bg-green;
    content: '✓';
}

.markup-code .hl-bad:before {
    @apply bg-red;
    content: '×';
}

.markup-code video, .markup-code img {
    @apply rounded-lg overflow-hidden mb-8 max-w-full;
}

/* Video markup */

.markup-video{
    @apply relative;
    @apply w-full;
    @apply h-0;
    padding-bottom: 56.25%;
    @apply bg-gray-darkest
}

.markup-video iframe{
    @apply absolute;
    @apply w-full !important;
    @apply h-full !important;
    @apply inset-0;
}

/* Updated Docs/Blog Post markup */

.markup.content-markup h1,
.markup.content-markup h2,
.markup.content-markup h3,
.markup.content-markup h4,
.markup.content-markup h5 {
    @apply font-pt;
    @apply mt-0;
    @apply clear-both;
    line-height: 1.2;
}

.markup.content-markup h2 {
    @apply font-semibold;
    @apply mt-9;
    @apply mb-5;
    font-size: 24px;
}

.markup.content-markup h3 {
    @apply font-semibold;
    @apply mb-5;
    font-size: 18px;
}

.markup.content-markup h4 {
    @apply font-semibold;
    @apply mb-5;
    @apply text-oss-royal-blue-light/90;
    font-size: 16px;
}

.markup.content-markup blockquote {
    @apply p-6 mb-9 border-l-2 rounded-sm border-blue-light bg-blue-lightest;
}

.markup.content-markup.markup-code blockquote > :not(pre) code {
    @apply bg-blue-50;
}

.markup.content-markup em {
    font-family: inherit;
    font-style: normal;
}

